Footer responsiveness on mobile fixed

--- a/facility/client/static/css/style.css
+++ b/facility/client/static/css/style.css
@@ -19,7 +19,7 @@
     max-width: 350px;
 }
 
-.stripedlist>li:nth-of-type(odd) {
+.stripedlist > li:nth-of-type(odd) {
     background-color: #e9e9f9;
 }
 
@@ -28,17 +28,14 @@ html {
     scroll-behavior: smooth;
 }
 
-body {}
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
 
 #main {
     overflow: auto;
-    /* padding-bottom:150px; /* this needs to be bigger than footer height*/
-}
-
-@media only screen and (min-height: 900px) {
-    body {
-        height: 60%;
-    }
 }
 
 .box {
@@ -63,13 +60,16 @@ body {}
 }
 
 .footer {
-    left: 0;
-    background-color: #f5f5f5;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    position: fixed;
+    margin-top: auto; /* Pushes the footer down */
+    background-color: #f8f9fa;
+    color: #212529;
 }
+
+.footer .container {
+    padding: 20px;
+    text-align: center;
+}
+
 
 .bg-department {
     background-color: rgb(45, 155, 104);
@@ -87,12 +87,68 @@ body {}
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+}
 
-  .carousel-img-container img {
+.carousel-img-container img {
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
     width: auto;
     height: auto;
-  }
+}
+
+@media (max-width: 768px) {
+    body {
+        font-size: 16px;
+    }
+
+    .footer .container {
+        font-size: 14px;
+    }
+
+    .container {
+        width: 100%;
+        padding: 0 15px;
+    }
+
+    .mt-5 {
+        margin-top: 3rem !important;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+    body {
+        font-size: 18px;
+    }
+
+    .container {
+        width: 750px;
+    }
+
+    .mt-5 {
+        margin-top: 3.5rem !important;
+    }
+
+    .footer .container {
+        font-size: 16px;
+    }
+}
+
+/* CSS for Small Laptops */
+@media (min-width: 992px) and (max-width: 1200px) {
+    body {
+        font-size: 20px;
+    }
+
+    .container {
+        width: 970px;
+    }
+
+    .mt-5 {
+        margin-top: 4rem !important;
+    }
+
+    .footer .container {
+        font-size: 18px;
+    }
+}
